--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-dash==2.0.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
+dash==1.20.0
+dash-core-components==1.16.0
+dash-html-components==1.1.3
+dash-renderer==1.9.0
 dash-bootstrap-components==0.13.0
-dash-auth==2.0.0
+dash-auth==1.4.0
 plotly==5.0.0
 gunicorn==20.1.0
 pandas>=1.0.0
