--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,4 @@ dash-core-components==1.16.0
 dash-html-components==1.1.3
 dash-renderer==1.9.0
 dash-bootstrap-components==0.13.0
-plotly==5.0.0
-gunicorn==20.1.0
-pandas>=1.0.0
-numpy>=1.18.0
-scikit-learn>=0.23.0
+webbrowser
